- fixed: removed unnecessary "approved signatures" handling - fixed: improved variable naming - fixed: null pointer exception in Coordinator::getVirtualNodeFromHRMID() - fixed: HRMViewer/GUI: changed "approved signatures" to correct routing head "routing table"